--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
 .App {
-  text-align: center;
+    background-color: #f4f6ff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    background-color: #10375C;
+    /* height: 20vh; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.navbar {
+    background-color: #127681;
+}
+
+.nav-item {
+    color: #F3C623 !important;
+}
+
+.gallery {
+    height: 65vh;
+}
+
+.carousel-inner {
+    width: 100%;
+    max-height: 50vh !important;
+}
+
+.secondsection {
+    background-color: #10375C;
+}
+
+@media only screen and (min-width : 991px) {
+    /* .secondsection {
+        height: 65vh;
+    } */
+    .fpheader {
+        margin-top: 55px;
+    }
+}
+
+.fp {
+    width: 100%;
+    transition: transform .2s;
+}
+
+.fp:hover {
+    transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fpheader {
+    border-bottom: 1.5px solid #F3C623;
 }
